--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Meme Generator</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
+    
 </head>
 
 <body onload="onInit()">
     <header class="flex main-header">
-        <img onclick="backToGallery()" src="../img/logo.png">
-        <img onclick="openUserOpts()" class="user-opts" src="../icons/hamburger.png">
+        <img onclick="backToGallery()" src="./img/logo.png">
+        <img onclick="openUserOpts()" class="user-opts" src="./icons/hamburger.png">
         <div class="list flex">
             <ul class="flex clean-ul">
                 <li onclick="backToGallery()"><a >Saved Memes</a></li>
@@ -24,7 +25,8 @@
 
     <main>
         <section class="flex filter-section">
-            <input type="text" placeholder="Search meme">
+            <div class="sort-opts">
+            </div>
         </section>
 
         <div class=" main-layout grid-container"></div>
@@ -60,7 +62,7 @@
                 </div>
                 <select onchange="onFontStyle(this.value)" class="font">
                     <option value="Impact">Impact</option>
-                    <option value="Ariel">Ariel</option>
+                    <option value="Courier New">Courier</option>
                     <option value="Tahoma">Tahoma</option>
                 </select>
                 <button onclick="changeFontSize('plus')"><img src="./icons/increase font - icon.png"></button>
@@ -69,7 +71,7 @@
         </div>
         <div class="flex local-btns">
             <button onclick="onSaveMeme()">Save</button>
-            <button onclick="onDownloadMeme()">Download</button>
+            <button><a onclick="onDownloadMeme(this)" href="">Download</a></button>
             <button onclick="onShareMeme()">Share</button>
         </div>
     </div>
@@ -78,6 +80,8 @@
         <img src="../img/logo.png">
     </footer>
 
+    <script src="./js/services/storage.service.js"></script>
+    <script src="./js/services/gallery.service.js"></script>
     <script src="./js/services/meme.service.js"></script>
     <script src="./js/gallery.controller.js"></script>
     <script src="./js/meme.conroller.js"></script>
