--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <base href="/Meme-Generator">
+    <base href="https://github.com/TalBenAtiya/Meme-Generator">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,8 +26,8 @@
 
     <main>
         <section class="flex filter-section">
-            <div class="sort-opts">
-            </div>
+            <div class="sort-opts"></div>
+            <button onclick="onRandomMeme()">I'm Flexible</button>
         </section>
 
         <div class=" main-layout grid-container"></div>
