--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html lang="en">
 
 <head>
-    <base href="./Meme-Generator">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Meme Generator</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     
 </head>
 
 <body onload="onInit()">
     <header class="flex main-header">
-        <img onclick="backToGallery()" src="./img/logo.png">
-        <img onclick="openUserOpts()" class="user-opts" src="./icons/hamburger.png">
+        <img onclick="backToGallery()" src="/img/logo.png">
+        <img onclick="openUserOpts()" class="user-opts" src="/icons/hamburger.png">
         <div class="list flex">
             <ul class="flex clean-ul">
-                <li onclick="backToGallery()"><a >Saved Memes</a></li>
+                <li onclick="renderSavedMemes()"><a >Saved Memes</a></li>
                 <li onclick="backToGallery()"><a>Gallery</a></li>
                 <li onclick="backToGallery()"><a>About</a></li>
             </ul>
@@ -27,7 +26,7 @@
     <main>
         <section class="flex filter-section">
             <div class="sort-opts"></div>
-            <button onclick="onRandomMeme()">I'm Flexible</button>
+            <button onclick="onRandomMeme()">I'm Flexible!</button>
         </section>
 
         <div class=" main-layout grid-container"></div>
@@ -78,7 +77,7 @@
     </div>
 
     <footer class="main-footer">
-        <img src="../img/logo.png">
+        <img src="/img/logo.png">
     </footer>
 
     <script src="./js/services/storage.service.js"></script>
