--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Meme Generator</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     
 </head>
 
 <body onload="onInit()">
     <header class="flex main-header">
-        <img onclick="backToGallery()" src="/img/logo.png">
-        <img onclick="openUserOpts()" class="user-opts" src="/icons/hamburger.png">
+        <img onclick="backToGallery()" src="img/LOGO.png">
+        <img onclick="openUserOpts()" class="user-opts" src="icons/hamburger.png">
         <div class="list flex">
             <ul class="flex clean-ul">
                 <li onclick="renderSavedMemes()"><a >Saved Memes</a></li>
@@ -77,7 +77,7 @@
     </div>
 
     <footer class="main-footer">
-        <img src="/img/logo.png">
+        <img src="img/LOGO.png">
     </footer>
 
     <script src="./js/services/storage.service.js"></script>
