--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="editor-opts">
 
-                <input oninput="onSetLineTxt(this.value)" class="meme-text" type="text" placeholder="change text">
+                <input oninput="onSetLineTxt(this.value)" class="meme-text" type="text" placeholder="Change Text">
 
                 <button onclick="changeSelectedLine()">
                     <img src="./icons/up-and-down-opposite-double-arrows-side-by-side.png">
@@ -71,8 +71,8 @@
         </div>
         <div class="flex local-btns">
             <button onclick="onSaveMeme()">Save</button>
-            <button><a onclick="onDownloadMeme(this)" href="">Download</a></button>
-            <button onclick="onShareMeme()">Share</button>
+            <button><a onclick="onDownloadMeme(this)">Download</a></button>
+            <button onclick="onShareMeme(this)">Share</button>
         </div>
     </div>
 
@@ -81,8 +81,11 @@
     </footer>
 
     <script src="./js/services/storage.service.js"></script>
+    <script src="./js/services/upload.service.js"></script>
+    <script src="./js/services/saved.service.js"></script>
     <script src="./js/services/gallery.service.js"></script>
     <script src="./js/services/meme.service.js"></script>
+    <script src="./js/saved.controller.js"></script>
     <script src="./js/gallery.controller.js"></script>
     <script src="./js/meme.conroller.js"></script>
 
