--- a/index.html
+++ b/index.html
@@ -52,9 +52,8 @@
     </main>
 
     <div hidden class="editor">
-
-
         <div class="editor-container">
+            <button onclick="backToGallery()"> ← &nbsp; Back To Gallery</button>
             <div class="canvas-container">
                 <canvas class="canvas" width="350px"></canvas>
             </div>
@@ -102,6 +101,7 @@
             <button onclick="onShareMeme(this)">Share</button>
         </div>
         <div class="msg-container flex">
+            
             <div class="flash-msg">Meme Saved!</div>
         </div>
         
